--- a/local.yml
+++ b/local.yml
@@ -6,7 +6,8 @@
         - install
         - core
   tasks:
-    # - include: tasks/core-setup.yml
-    # - include: tasks/nvim-setup.yml
-    # - include: tasks/node-setup.yml
+    - include: tasks/core-setup.yml
+    - include: tasks/nvim-setup.yml
+    - include: tasks/node-setup.yml
     - include: tasks/dotfiles.yml
+    - include: tasks/npm-packages.yml
