--- a/tasks/productivity-tools.yml
+++ b/tasks/productivity-tools.yml
@@ -2,9 +2,11 @@
   stat: path=/usr/local/bin/brew
   register: homebrew_installed
 
-- name: Install Homebrew
-  shell: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-  when: not homebrew_installed.stat.exists
+# - name: Install Homebrew
+#   shell: echo | /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+#   become: yes
+#   become_user: "leonmiltiadou"
+#   when: not homebrew_installed.stat.exists
 
 - name: Tap Homebrew/cask if not tapped
   homebrew_tap:
